# FastDelegate

./: CMakeLists.txt  FastDelegate-config.cmake  FastDelegateConfig.cmake.in  README.md
include/: FastDelegate.h
